# koil

./: .gitignore  2  404.html  CHANGELOG.md  README.md  index.html  logs.txt  pyproject.toml  sitemap.xml  test.py  tox.ini
.github/workflows/: coverage.yaml  docker-master.yaml  documentation.yaml  quality.yaml  release.yaml  tests.yaml
assets/js/: 01a85c17.5be748c0.js  0e384e19.0335d693.js  0e384e19.81c11eb4.js  17896441.a25e87c3.js  1df93b7f.07192652.js  1df93b7f.daa6b8db.js  2e8948b2.6917ea3c.js  393be207.af60b555.js  42415cee.2e6f80fe.js  59362658.e15787d9.js  6875c492.35d7ba62.js  70ad9206.a737dd0b.js  814f3328.48f7428a.js  935f2afb.17eeedd9.js  935f2afb.63d8f4c7.js  99450b70.3ba3efb9.js  a6aa9e1f.f6c4d0a7.js  ccc49370.efad4db5.js  common.d0e86c94.js  f4f34a3a.5e1f34bc.js  fbd25a76.48e63976.js  main.5417db9a.js  main.cf88acba.js  runtime~main.370129a5.js  runtime~main.84dcda6f.js  runtime~main.86c21d66.js
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/rath/: index.html
docs/: api.md  composition.md  concepts.md  intro.md  qt_integration.md  threaded.md  usage.md
docs/intro/: index.html
docs/threaded/: index.html
koil/: __init__.py  b+.py  bridge.py  composition.py  context.py  decorators.py  errors.py  excecutors.py  exceptions.py  executor.py  helpers.py  jupy.py  koil.py  loop.py  predicates.py  process.py  protocols.py  psygnal.py  qt.py  state.py  task.py  tracebacks.py  types.py  utils.py  vars.py
koil/checker/: base.py  registry.py
koil/checker/defaults/: __init__.py  jupyter_checker.py  qt_checker.py
koil/composition/: __init__.py  base.py  qt.py
koil/config/: base.py  herre.py  logging.py
koil/contrib/: pytest_qt.py
koil/task/: qt.py
markdown-page/: index.html
tests/: context.py  test_cancellation.py  test_composition.py  test_context_complex.py  test_context_vars.py  test_deprecations.py  test_error_conditions.py  test_generators.py  test_interrupt_teardown.py  test_iterate_spawned.py  test_keyboard_interrupt.py  test_koil.py  test_koilable_decorator.py  test_koiled.py  test_multilevel.py  test_processed.py  test_qtkoil copy.py  test_qtkoil.py  test_qtkoil_modern.py  test_qtwidget_modern.py  test_race_conditions.py  test_threaded.py  test_timeouts.py  test_traceback_rewriting.py
tests/qt_test/: test_qtwidget_modern.py
website/: docusaurus.config.js
website/docs/: intro.md
website/src/components/: HomepageFeatures.tsx
