[project]
name = "koil"
version = "1.0.3"
description = "Async for a sync world"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2",
    "janus>=1.0.0,<2",
]

[project.optional-dependencies]
qtpy = ["qtpy>1"]
uvloop = ["uvloop>=0.16.0,<0.17"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "black>=22.10.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "QtPy>=2.3.0",
    "pytest-asyncio>=0.20.2",
    "cloudpickle>=2.2.1,<3",
    "pyqt5>=5.15.11",
    "pyqt5-qt5>=5.15.16",
]

[tool.hatch.build.targets.sdist]
include = ["koil"]

[tool.hatch.build.targets.wheel]
include = ["koil"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
qt_api = "pyqt5"
markers = ["qt: marks tests that require a running qt application", "process: marks tests that require the process extra"]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["koil"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"

[tool.mypy]
ignore_missing_imports = true
strict = true
