[project]
name = "koil"
version = "2.0.1"
description = "Async for a sync world"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2",
    "janus>=1.0.0,<2",
]

[project.optional-dependencies]
qtpy = ["qtpy>1"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.2.0",
    "black>=22.10.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "QtPy>=2.3.0",
    "pytest-asyncio>=0.20.2",
    "cloudpickle>=2.2.1,<3",
    "pyqt5>=5.15.11",
    "pyqt5-qt5>=5.15.16",
    "pyqt5-stubs>=5.15.6.0",
    "python-semantic-release>=9.21.1",
]

[tool.hatch.build.targets.sdist]
include = ["koil"]

[tool.hatch.build.targets.wheel]
include = ["koil"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
qt_api = "pyqt5"
markers = ["qt: marks tests that require a running qt application", "process: marks tests that require the process extra"]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["koil"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"

[tool.mypy]
ignore_missing_imports = true
strict = true



[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"
