[project]
name = "koil"
version = "3.3.0"
description = "Async for a sync world"
authors = [{ name = "jhnnsrs", email = "jhnnsrs@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
qtpy = ["qtpy>1"]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "black>=22.10.0",
    "pytest-cov>=4.0.0",
    "pytest-timeout>=2.1.0",
    "QtPy>=2.3.0",
    "pytest-asyncio>=0.20.2",
    "cloudpickle>=2.2.1,<3",
    "pyqt5-stubs>=5.15.6.0",
    "python-semantic-release>=9.21.1",
]

[tool.hatch.build.targets.sdist]
include = ["koil"]

[tool.hatch.build.targets.wheel]
include = ["koil"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
qt_api = "pyqt5"
# Global safety net so a hung test (e.g. cancellation tests on Windows) fails
# instead of blocking the whole CI run. "thread" is used because the default
# "signal" method relies on SIGALRM, which is not available on Windows. On
# timeout, pytest-timeout dumps the stacks of all threads so we can see where
# it got stuck. Individual tests can tighten this via @pytest.mark.timeout(...).
timeout = 60
timeout_method = "thread"
markers = ["qt: marks tests that require a running qt application", "process: marks tests that require the process extra"]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["koil"]

[tool.pydoc-markdown.renderer]
type = "docusaurus"
docs_base_path = "website/docs"

[tool.mypy]
ignore_missing_imports = true
strict = true



[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = true
branch = "main"
build_command = "uv build"
